--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
+fabric_asm_version=v2.0
 minecraft_version=1.15.2
 yarn_mappings=1.15.2+build.14
 loader_version=0.7.8+build.189
