refactor: Force spaces for indentation absolutely everywhere

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ yarn_mappings=1.15.2+build.14
 loader_version=0.7.8+build.189
 
 # Mod Properties
-mod_version = 0.1.0
-maven_group = me.jellysquid.mods
-archives_base_name = sodium
+mod_version=0.1.0
+maven_group=me.jellysquid.mods
+archives_base_name=sodium
