change: Use correct version scheme

--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,20 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}-fabric"
+archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
 version = project.mod_version
 group = project.maven_group
+
+def build_release = System.getenv("BUILD_RELEASE") == "true"
+def build_id = System.getenv("BUILD_ID")
+
+if (!build_release) {
+    version += "-SNAPSHOT"
+}
+
+if (build_id != null) {
+    version += "+build.${build_id}"
+}
 
 minecraft {
 }
