--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ loader_version=0.8.2+build.194
 mod_version=0.1.0
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
+
+# Dependency Properties
+# (these are all optional)
+fabric_api_version=0.13.1+build.316-1.15
+modmenu_version=1.10.2+build.32
