--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,11 @@ dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Sodium itself doesn't use Fabric API at all, this is purely for optional dependency testing -ADCL
-    modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-    modApi "io.github.prospector:modmenu:${project.modmenu_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+    modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 }
 
 processResources {
