Push fabric to latest version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.1
-loader_version=0.10.6+build.214
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
 
 # Mod Properties
 mod_version=0.1.1
