--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ mod_version=0.1.1
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
 
+# Fabric API Resource Loader version
+fabric_resource_loader_version=0.2.5+059ea86602
+
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
 databreaker_version = 0.2.6
