change: Invoke Fabric API's ClientChunkEvents in SodiumChunkManager
Invoke chunk load/unload events as Sodium overrides ClientChunkManager with it's own. Fixes #228 .

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    // Fabric Lifecycle Events for hooking ClientChunkEvents
+    modCompile fabricApi.module("fabric-lifecycle-events-v1", project.fabric_api_version)
+    include fabricApi.module("fabric-lifecycle-events-v1", project.fabric_api_version)
 }
 
 processResources {
