fix: Remove debug-hack in build.gradle revision checking

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ def getVersionMetadata() {
         return "build.${build_id}"
     }
 
-    if (grgit == null) {
+    if (grgit != null) {
         def head = grgit.head()
         def id = head.abbreviatedId
 
