--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@ plugins {
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
 archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
 version = "${project.mod_version}+${getVersionMetadata()}"
 group = project.maven_group
@@ -53,6 +50,11 @@ tasks.withType(JavaCompile) {
 
 java {
     withSourcesJar()
+
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+        vendor = JvmVendorSpec.ADOPTOPENJDK
+    }
 }
 
 jar {
@@ -81,21 +83,4 @@ def getVersionMetadata() {
 
     // No tracking information could be found about the build
     return "unknown"
-}
-
-// Fails the build if JDK 1.8 is not being used
-tasks.register('enforceJdkVersion') {
-    doLast {
-        def jdkVersion = JavaVersion.current()
-
-        if (jdkVersion != JavaVersion.VERSION_1_8) {
-            throw new IllegalStateException("This project must be built with JDK 1.8 (Java 8), but JDK ${jdkVersion} was found...")
-        }
-    }
-}
-
-// Users who know what they are doing can specify -PskipJdkVersionCheck on the command
-// line to bypass this check
-if (!project.hasProperty('skipJdkVersionCheck')) {
-    compileJava.dependsOn(enforceJdkVersion)
 }
