Update GitHub Actions and README (#7)
* fix build

* fix readme instructions

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'IrisShaders/Iris'
-        ref: 'sodium-compatibility'
+        ref: 'trunk'
         path: 'iris'
     - name: Iris publishToMavenLocal
       run: cd ./iris && ./gradlew publishToMavenLocal && cd ..
