--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.1
-loader_version=0.10.6+build.214
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.8
+loader_version=0.11.3
 
 # Mod Properties
 mod_version=0.1.1
