Update Sodium to 1.17-rc1

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.1
-loader_version=0.10.6+build.214
+minecraft_version=1.17-rc1
+yarn_mappings=1.17-rc1+build.1
+loader_version=0.11.3
 
 # Mod Properties
 mod_version=0.1.1
@@ -13,5 +13,5 @@ maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
-use_third_party_mods = true
+use_third_party_mods = 0
 databreaker_version = 0.2.6
