--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17-rc1
-yarn_mappings=1.17-rc1+build.1
+minecraft_version=1.17
+yarn_mappings=1.17+build.1
 loader_version=0.11.3
 
 # Mod Properties
