--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
-    id 'fabric-loom' version '0.6-SNAPSHOT'
+    id 'fabric-loom' version '0.8-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
+
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
 version = "${project.mod_version}+${getVersionMetadata()}"
@@ -21,13 +24,13 @@ dependencies {
 
 if (project.use_third_party_mods) {
     repositories {
-        maven { url = "https://jitpack.io" }
+        maven { url = "https://maven.gegy.dev" }
     }
 
     dependencies {
         // DataBreaker applies a number of patches to eliminate the loading of data fixers
         // This greatly reduces the amount of time needed to start the game, but is generally unsafe in production
-        modRuntime ("com.github.SuperCoder7979:databreaker:${project.databreaker_version}") {
+        modRuntime ("supercoder79:databreaker:${project.databreaker_version}") {
             transitive = false
         }
     }
@@ -50,10 +53,6 @@ tasks.withType(JavaCompile) {
 
 java {
     withSourcesJar()
-
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
-    }
 }
 
 jar {
