new: fabric-rendering-fluids-v1 support

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    // Fabric API
+    modImplementation(fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version))
 }
 
 if (project.use_third_party_mods) {
