--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     // Fabric API
     modImplementation(fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version))
+    modImplementation(fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version))
 }
 
 if (project.use_third_party_mods) {
