--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,10 @@ mod_version=0.3.0
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
 
+# If true, Fabric API will be loaded during runtime in the developer run configurations
+# Use this to test Fabric API compatibility
+use_fapi = false
+
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
 databreaker_version = 0.2.7
