--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ archives_base_name=sodium-fabric
 
 # If true, Fabric API will be loaded during runtime in the developer run configurations
 # Use this to test Fabric API compatibility
-use_fapi = false
-fabric_version=0.34.9+1.17
+use_fabric_at_runtime = true
+fabric_version = 0.34.9+1.17
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
