--- a/.github/ISSUE_TEMPLATE/crash-report.yml
+++ b/.github/ISSUE_TEMPLATE/crash-report.yml
@@ -50,7 +50,7 @@ body:
         Example:
         1. Place a Redstone Lamp in front of a Redstone Repeater
         2. Use a Lever to activate the Redstone Repeater
-        3. Nothing happens
+        3. The game crashes
     validations:
       required: true
   - type: textarea
