Readd `bug` label to bug report form

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,6 @@
 name: Bug report
 description: ' Use this template if you''re running into bugs or other issues '
+labels: bug
 body:
   - type: markdown
     attributes:
