Readd `crash` label to crash report form

--- a/.github/ISSUE_TEMPLATE/crash-report.yml
+++ b/.github/ISSUE_TEMPLATE/crash-report.yml
@@ -1,5 +1,6 @@
 name: Crash report
 description: Use this template if your game is crashing or failing to start correctly
+labels: crash
 body:
   - type: markdown
     attributes:
