--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.10.26'
+    id 'fabric-loom' version '0.10.36'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
@@ -11,8 +11,8 @@ version = "${project.mod_version}+${getVersionMetadata()}"
 group = project.maven_group
 
 minecraft {
-    refmapName = "mixins.sodium.refmap.json"
-    accessWidener = file("src/main/resources/sodium.accesswidener")
+    mixin.defaultRefmapName = "mixins.sodium.refmap.json"
+    accessWidenerPath = file("src/main/resources/sodium.accesswidener")
 }
 
 configurations {
@@ -41,6 +41,8 @@ if (project.use_third_party_mods) {
     }
 
     dependencies {
+        //TODO: DataBreaker does not exist for 1.18 yet.
+
         // DataBreaker applies a number of patches to eliminate the loading of data fixers
         // This greatly reduces the amount of time needed to start the game, but is generally unsafe in production
         //modRuntime ("supercoder79:databreaker:${project.databreaker_version}") {
