--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=21w40a
-yarn_mappings=21w40a+build.1
+minecraft_version=21w42a
+yarn_mappings=21w42a+build.1
 loader_version=0.11.7
-fabric_version=0.40.7+1.18
+fabric_version=0.41.1+1.18
 
 # Mod Properties
 mod_version=0.3.2
@@ -14,5 +14,5 @@ maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
-use_third_party_mods = false
+use_third_party_mods = true
 databreaker_version = 0.2.7
