--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}
 version = "${project.mod_version}+${getVersionMetadata()}"
 group = project.maven_group
 
-minecraft {
+loom {
     mixin.defaultRefmapName = "mixins.sodium.refmap.json"
     accessWidenerPath = file("src/main/resources/sodium.accesswidener")
 }
@@ -37,17 +37,20 @@ dependencies {
 
 if (project.use_third_party_mods) {
     repositories {
-        maven { url = "https://maven.gegy.dev" }
+        maven { url = "https://jitpack.io" }
+        // Re-add this once Databreaker has an official 1.18 release
+        //maven { url = "https://maven.gegy.dev" }
     }
 
     dependencies {
-        //TODO: DataBreaker does not exist for 1.18 yet.
+        //DataBreaker does not officially exist for 1.18 yet, so a custom fork has to be used via Jitpack.
 
         // DataBreaker applies a number of patches to eliminate the loading of data fixers
         // This greatly reduces the amount of time needed to start the game, but is generally unsafe in production
         //modRuntime ("supercoder79:databreaker:${project.databreaker_version}") {
-        //    transitive = false
-        //}
+        modRuntime ("com.github.IMS212:DataBreaker:master-SNAPSHOT") {
+            transitive = false
+        }
     }
 }
 
