--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.10.36'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
