--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=21w44a
-yarn_mappings=21w44a+build.10
+minecraft_version=1.18-pre2
+yarn_mappings=1.18-pre2+build.1
 loader_version=0.11.7
-fabric_version=0.42.1+1.18
+fabric_version=0.42.2+1.18
 
 # Mod Properties
 mod_version=0.3.2
