--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ if (project.use_third_party_mods) {
         // DataBreaker applies a number of patches to eliminate the loading of data fixers
         // This greatly reduces the amount of time needed to start the game, but is generally unsafe in production
         //modRuntime ("supercoder79:databreaker:${project.databreaker_version}") {
-        modRuntime ("com.github.IMS212:DataBreaker:master-SNAPSHOT") {
+        modRuntimeOnly ("com.github.IMS212:DataBreaker:master-SNAPSHOT") {
             transitive = false
         }
     }
