--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
-sourceCompatibility = "16"
-targetCompatibility = "16"
+sourceCompatibility = "17"
+targetCompatibility = "17"
 
 archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
 version = "${project.mod_version}+${getVersionMetadata()}"
@@ -38,7 +38,7 @@ dependencies {
     modIncludeImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
 }
 
-if (project.use_third_party_mods) {
+if (project.use_third_party_mods == "true") {
     repositories {
         maven { url = "https://maven.gegy.dev" }
     }
