--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
+    id "io.github.juuxel.loom-quiltflower-mini" version "1.1.0"
 }
 
 sourceCompatibility = "17"
@@ -13,6 +14,10 @@ group = project.maven_group
 minecraft {
     refmapName = "mixins.sodium.refmap.json"
     accessWidener = file("src/main/resources/sodium.accesswidener")
+}
+
+quiltflower {
+    addToRuntimeClasspath.set(true)
 }
 
 configurations {
