--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'fabric-loom' version '0.10-SNAPSHOT'
+    id 'fabric-loom' version '0.8-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
-sourceCompatibility = "17"
-targetCompatibility = "17"
+sourceCompatibility = "16"
+targetCompatibility = "16"
 
 archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
 version = "${project.mod_version}+${getVersionMetadata()}"
@@ -36,6 +36,20 @@ dependencies {
     modIncludeImplementation(fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version))
     modIncludeImplementation(fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version))
     modIncludeImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+}
+
+if (project.use_third_party_mods) {
+    repositories {
+        maven { url = "https://maven.gegy.dev" }
+    }
+
+    dependencies {
+        // DataBreaker applies a number of patches to eliminate the loading of data fixers
+        // This greatly reduces the amount of time needed to start the game, but is generally unsafe in production
+        modRuntime ("supercoder79:databreaker:${project.databreaker_version}") {
+            transitive = false
+        }
+    }
 }
 
 processResources {
