--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18-pre8
-yarn_mappings=1.18-pre8+build.2
-loader_version=0.12.5
-fabric_version=0.43.0+1.18
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.1
+loader_version=0.11.6
+fabric_version=0.36.1+1.17
 
 # Mod Properties
-mod_version=0.4.0
+mod_version=0.3.2
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
+
+# If true, third-party mods will be loaded during runtime in the developer run configurations
+use_third_party_mods = true
+databreaker_version = 0.2.7
