--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ loader_version=0.12.6
 fabric_version=0.43.1+1.18
 
 # Mod Properties
-mod_version=0.4.0
+mod_version=0.4.0-alpha5
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
