--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18-rc4
-yarn_mappings=1.18-rc4+build.1
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
 loader_version=0.12.6
 fabric_version=0.43.1+1.18
 
