--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
+minecraft_version=1.18.1-rc1
+yarn_mappings=1.18.1-rc1+build.1
 loader_version=0.12.6
-fabric_version=0.43.1+1.18
+fabric_version=0.44.0+1.18
 
 # Mod Properties
 mod_version=0.4.0-alpha5
