--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1-rc1
-yarn_mappings=1.18.1-rc1+build.1
-loader_version=0.12.6
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.12
+loader_version=0.12.12
 fabric_version=0.44.0+1.18
 
 # Mod Properties
