--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.12
+minecraft_version=22w03a
+yarn_mappings=22w03a+build.1
 loader_version=0.12.12
-fabric_version=0.44.0+1.18
+fabric_version=0.46.2+1.18
 
 # Mod Properties
 mod_version=0.4.0-alpha6
