Fix chunk loading issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/develop/
 minecraft_version=22w03a
-yarn_mappings=22w03a+build.1
+yarn_mappings=22w03a+build.3
 loader_version=0.12.12
 fabric_version=0.46.2+1.18
 
