--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.18.2-pre1
-yarn_mappings=1.18.2-pre1+build.4
-loader_version=0.13.2   
-fabric_version=0.47.3+1.18.2
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.13.3
+fabric_version=0.47.8+1.18.2
 
 # Mod Properties
 mod_version=0.4.0-alpha6
