--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ loader_version=0.13.3
 fabric_version=0.47.8+1.18.2
 
 # Mod Properties
-mod_version=0.4.0-alpha6
+mod_version=0.4.1
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
