change: Modernize build scripts
- Pinned the Fabric Loom version being used, and resolved
the deprecation warnings for 0.11. Depending on a SNAPSHOT
artifact like before made things less hygienic and builds
non-reproducible. Anecdotally, this has improved daemon
startup time as well.

- Removed some code duplication within the build scripts,
and tried to make dependency configuration names and task
setup more consistent.

- Removed the Gradle Git plugin to speed up build times,
and simplified the build artifact version format. Any
build without the "releaseType" property set to "stable"
will be tagged with "-unstable".

- Removed unnecessary settings.gradle and .gitignore files.

- Replaced some arbitrary strings with typed constants.

- Update GitHub Actions to use softprops/action-gh-release
instead as the action we were using before is on longer
maintained. This also allows us to use file globs, which
avoids the extra human step needed to remove the -dev files
manually.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           java-version: 17
       - name: Build artifacts
-        run: ./gradlew build
-      - name: Upload assets to GitHub
-        uses: AButler/upload-release-assets@v2.0
+        run: ./gradlew build -PreleaseType=stable
+      - name: Upload release artifacts to GitHub
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: 'build/libs/*;LICENSE'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          files: build/libs/*[0-9].jar
