--- a/components/gfx-opengl/build.gradle
+++ b/components/gfx-opengl/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "java"
+apply from: "${rootProject.projectDir}/gradle/fabric.gradle"
+apply from: "${rootProject.projectDir}/gradle/java.gradle"
 
 archivesBaseName = 'sodium-gfx-opengl'
 version = rootProject.version
@@ -17,12 +19,4 @@ dependencies {
     implementation "org.apache.commons:commons-lang3:3.12.0"
 
     compileOnly "org.jetbrains:annotations:23.0.0"
-}
-
-processResources {
-    inputs.property "version", project.version
-
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
 }
