--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/develop/
 minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.12
 loader_version=0.12.12
 fabric_version=0.44.0+1.18
 
 # Mod Properties
-mod_version=0.4.0-alpha5
+mod_version=0.5.0
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
