--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.1
+minecraft_version=22w11a
+yarn_mappings=22w11a+build.2
 loader_version=0.13.3
 fabric_version=0.47.8+1.18.2
 
