change: Use third-party mods for development
This enables Starlight and LazyDFU in the developer
runtime by default. These can be disabled by setting
the project property 'sodium.use_third_party_mods' to
'false'.

Why not Phosphor? Through my own admission, Phosphor
didn't do much to reduce world load times, and these
are really quite a sore spot right now.

Why not Databreaker? We probably don't want to break
DFU entirely, and LazyDFU is minimally invasive while
still preventing the excessive CPU load at startup. It
also seems that the author of Databreaker has other
things they'd like to focus on right now.

--- a/build.gradle
+++ b/build.gradle
@@ -28,21 +28,39 @@ configurations {
     modImplementation.extendsFrom includeModImplementation
 }
 
+repositories {
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
+}
+
 dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    includeImplementation 'org.joml:joml:1.10.4'
-    includeImplementation project(":components:gfx")
-    includeImplementation project(":components:gfx-opengl")
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Fabric API modules
     includeModImplementation fabricApi.module("fabric-api-base", project.fabric_version)
     includeModImplementation fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version)
     includeModImplementation fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version)
     includeModImplementation fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
+
+    includeImplementation 'org.joml:joml:1.10.4'
+    includeImplementation project(":components:gfx")
+    includeImplementation project(":components:gfx-opengl")
+
+    if (findProperty("sodium.use_third_party_mods") != "false") {
+        // lazydfu not updated yet
+//        modRuntimeOnly "maven.modrinth:lazydfu:0.1.3"
+        modRuntimeOnly "maven.modrinth:starlight:1.1.0+1.19"
+    }
 }
 
 String getVersion() {
