change: Use custom JVM args for development
This enables the Zero Garbage Collector (ZGC) and sets
a reasonable heap size by default. The behavior can be
turned off by setting the project property
'sodium.use_custom_jvm_args' to 'false'.

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ loom {
         defaultRefmapName = "mixins.sodium.refmap.json"
     }
 
+    if (findProperty("sodium.use_custom_jvm_args") != "false") {
+        runs {
+            it.configureEach {
+                vmArgs("-Xmx3G", "-XX:+UseZGC")
+            }
+        }
+    }
+
     accessWidenerPath.set file("src/main/resources/sodium.accesswidener")
 }
 
