--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,7 @@ pluginManagement {
     }
 }
 
+includeBuild "components/gradle-shaderc-plugin"
+
 include ":components:gfx"
 include ":components:gfx-opengl"
