--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=22w18a
-yarn_mappings=22w18a+build.1
-loader_version=0.14.3
-fabric_version=0.52.1+1.19
+minecraft_version=1.19-pre1
+yarn_mappings=1.19-pre1+build.1
+loader_version=0.14.5
+fabric_version=0.52.4+1.19
 
 # Mod Properties
 mod_version=0.4.1
