--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.2
-loader_version=0.13.3
-fabric_version=0.48.0+1.18.2
+minecraft_version=1.19-pre1
+yarn_mappings=1.19-pre1+build.1
+loader_version=0.14.5
+fabric_version=0.52.4+1.19
 
 # Mod Properties
 mod_version=0.5.0
