--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ loader_version=0.14.6
 fabric_version=0.55.1+1.19
 
 # Mod Properties
-mod_version=0.4.2-beta.1
+mod_version=0.4.2
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
