--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19-rc2
-yarn_mappings=1.19-rc2+build.1
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 fabric_version=0.55.1+1.19
 
