--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
-fabric_version=0.55.1+1.19
+minecraft_version=1.19.1-rc1
+yarn_mappings=1.19.1-rc1+build.1
+loader_version=0.14.8
+fabric_version=0.56.3+1.19
 
 # Mod Properties
-mod_version=0.4.2
+mod_version=0.4.3
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
