--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
         java-version: 17
     - name: Cache/Uncache Sodium
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.gradle/caches
@@ -30,8 +30,7 @@ jobs:
       run: ref="${GITHUB_REF#refs/heads/}" && echo "::set-output name=branch::${ref////-}"
       id: ref
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: sodium-artifacts-${{ steps.ref.outputs.branch }}
-        # Filter built files to disregard -sources and -dev, and leave only the minecraft-compatible jars.
-        path: build/libs/*[0-9].jar
+        path: build/libs/*.jar
