--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 17
+        distribution: adopt
     - name: Cache/Uncache Sodium
       uses: actions/cache@v3
       with:
