--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
         java-version: 17
     - name: Cache/Uncache Sodium
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.gradle/caches
@@ -34,4 +34,5 @@ jobs:
       with:
         name: sodium-artifacts-${{ steps.ref.outputs.branch }}
         # Filter built files to disregard -sources and -dev, and leave only the minecraft-compatible jars.
+        # This also filters out unstable versions, and only builds for tagged versions.
         path: build/libs/*[0-9].jar
