--- a/build.gradle
+++ b/build.gradle
@@ -71,9 +71,9 @@ dependencies {
 
     if (findProperty("sodium.use_third_party_mods") != "false") {
         modRuntimeOnly "maven.modrinth:lazydfu:0.1.3"
-        modRuntimeOnly "maven.modrinth:starlight:1.1.0+1.19"
-        // lithium seems to have some issues in a dev env at the moment, disable for now
-        modRuntimeOnly "maven.modrinth:lithium:mc1.19-0.8.0"
+        modRuntimeOnly "maven.modrinth:starlight:1.1.1+1.19"
+        modRuntimeOnly "maven.modrinth:lithium:mc1.19.1-0.8.3"
+        modRuntimeOnly "maven.modrinth:ferrite-core:5.0.0-fabric"
     }
 }
 
