--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.1-rc1
-yarn_mappings=1.19.1-rc1+build.1
-loader_version=0.14.8
-fabric_version=0.56.3+1.19
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.8
+loader_version=0.14.9
+fabric_version=0.60.0+1.19.2
 
 # Mod Properties
 mod_version=0.4.3
