--- a/components/gfx-utils/build.gradle
+++ b/components/gfx-utils/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation "it.unimi.dsi:fastutil:8.5.6"
     implementation "org.lwjgl:lwjgl:3.3.1"
     implementation "org.apache.commons:commons-lang3:3.12.0"
+    implementation "org.joml:joml:1.10.4"
 
     compileOnly "org.jetbrains:annotations:23.0.0"
 }
