--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.8
+minecraft_version=22w42a
+yarn_mappings=22w42a+build.2
 loader_version=0.14.9
 fabric_version=0.60.0+1.19.2
 
