fix: actual 1.19.3 update

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
@@ -26,10 +26,10 @@ dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation files("loader.jar")
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    implementation 'org.joml:joml:1.10.4'
-    include 'org.joml:joml:1.10.4'
+    implementation 'org.joml:joml:1.10.5'
+    include 'org.joml:joml:1.10.5'
 
     // Fabric API
     modIncludeImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
