--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.8
-loader_version=0.14.9
-fabric_version=0.61.0+1.19.2
+minecraft_version=22w44a
+yarn_mappings=22w44a+build.7
+loader_version=0.14.10
+fabric_version=0.65.3+1.19.3
 
 # Mod Properties
 mod_version=0.5.0
