--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=22w46a
-yarn_mappings=22w46a+build.1
+minecraft_version=1.19.3-pre1
+yarn_mappings=1.19.3-pre1+build.4
 loader_version=0.14.10
-fabric_version=0.66.3+1.19.3
+fabric_version=0.67.1+1.19.3
 
 # Mod Properties
 mod_version=0.4.4
