--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3-pre3
-yarn_mappings=1.19.3-pre3+build.1
+minecraft_version=1.19.3-rc1
+yarn_mappings=1.19.3-rc1+build.1
 loader_version=0.14.11
 fabric_version=0.68.0+1.19.3
 
